# rem-borrower

./: .gitignore  Cargo.toml  Makefile  rust-toolchain.toml
.github/workflows/: ci.yml
input/: borrow.rs  borrow_no_use_after.rs  borrow_read_use_after.rs  borrow_ref_aliased.rs  borrow_write_use_after.rs  in_out_lifetimes.rs  in_out_lifetimes_aliased.rs  paper_borrow.rs  paper_borrow_in_out.rs  vec_borrow_assign_op_slice.rs  vec_borrow_assign_slice.rs  vec_borrow_immut.rs  vec_borrow_mut.rs  vec_borrow_println.rs
output/: borrow.rs  borrow_no_use_after.rs  borrow_read_use_after.rs  borrow_ref_aliased.rs  borrow_write_use_after.rs  in_out_lifetimes.rs  in_out_lifetimes_aliased.rs  paper_borrow.rs  paper_borrow_in_out.rs  vec_borrow_assign_op_slice.rs  vec_borrow_assign_slice.rs  vec_borrow_immut.rs  vec_borrow_mut.rs  vec_borrow_println.rs
pre_extract/: borrow_no_use_after.rs  borrow_read_use_after.rs  borrow_ref_aliased.rs  borrow_write_use_after.rs  in_out_lifetimes.rs  in_out_lifetimes_aliased.rs  paper_borrow.rs  paper_borrow_in_out.rs  vec_borrow_assign_op_slice.rs  vec_borrow_assign_slice.rs  vec_borrow_immut.rs  vec_borrow_mut.rs  vec_borrow_println.rs
scripts/: build.sh  build_fresh.sh  build_release.sh  build_release_fresh.sh  run.sh  run_fresh.sh
src/: borrow.rs  error.rs  lib.rs  main.rs
